--- a/css/default.css
+++ b/css/default.css
@@ -1,9 +1,12 @@
+/*
+    Default
+*/
+
 @import url(http://fonts.googleapis.com/css?family=Arvo:400,700,400italic);
 @import url(http://fonts.googleapis.com/css?family=Lobster+Two:700italic,400italic);
 
 body,
 html {
-    /* background: url(binary.png); */
     background: #efefef;
     color: #222;
     font-family: 'Arvo', serif;
