--- a/css/default.css
+++ b/css/default.css
@@ -17,7 +17,7 @@ body,
 html {
     background: #efefef;
     color: #222;
-    font-family: normal 400 1em 'Arvo', serif;
+    font: normal 400 1em 'Arvo', serif;
     height: 100%;
     margin: 0;
     padding: 0;
