--- a/css/default.css
+++ b/css/default.css
@@ -10,8 +10,23 @@
     light blue      #5366F3     visited and unvisited links
     lighter blue    #A5ADEB     hover over links
 */
-@import url(http://fonts.googleapis.com/css?family=Arvo:400,700,400italic);
-@import url(http://fonts.googleapis.com/css?family=Lobster+Two:700italic,400italic);
+
+/* @import url(http://fonts.googleapis.com/css?family=Arvo:400,700); */
+@font-face {
+  font-family: 'Arvo';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Arvo'), url(../fonts/arvo.woff) format('woff');
+}
+
+/*@import url(http://fonts.googleapis.com/css?family=Lobster+Two:700italic,400italic);*/
+@font-face {
+  font-family: 'Lobster Two';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Lobster Two'), local('LobsterTwo-Italic'), url(../fonts/lobstertwo-italic.woff) format('woff');
+}
+
 
 body,
 html {
@@ -43,7 +58,7 @@ header {
 }
 
 header h1 {
-    font: italic 700 2em 'Lobster Two', cursive;
+    font: italic 700 2em 'Lobster Two', serif;
     margin: 0 0 0 16px;
     text-shadow: 1px 1px #B9B9B9;
 }
@@ -98,7 +113,7 @@ section {
 }
 
 section h2 {
-    font: italic 400 1.5em 'Lobster Two', cursive;
+    font: italic 400 1.5em 'Lobster Two', serif;
     margin: 1em 0 0 0;
 }
 
