--- a/css/silvange.css
+++ b/css/silvange.css
@@ -9,9 +9,42 @@
     burnt orange #CC5500     hover over links
 
 */
-@import url(http://fonts.googleapis.com/css?family=Lobster+Two:700italic,400italic);
-@import url(http://fonts.googleapis.com/css?family=Habibi);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:800,300);
+/*@import url(http://fonts.googleapis.com/css?family=Habibi);*/
+@font-face {
+  font-family: 'Habibi';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Habibi'), local('Habibi-Regular'), url(../fonts/habibi.woff) format('woff');
+}
+
+/*@import url(http://fonts.googleapis.com/css?family=Open+Sans:800,300);*/
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Open Sans Light'), local('OpenSans-Light'), url(../fonts/opensans-light.woff) format('woff');
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 800;
+  src: local('Open Sans Extrabold'), local('OpenSans-Extrabold'), url(../fonts/opensans-extrabold.woff) format('woff');
+}
+
+/*@import url(http://fonts.googleapis.com/css?family=Lobster+Two:700italic,400italic);*/
+@font-face {
+  font-family: 'Lobster Two';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Lobster Two Italic'), local('LobsterTwo-Italic'), url(../fonts/lobstertwo-italic.woff) format('woff');
+}
+@font-face {
+  font-family: 'Lobster Two';
+  font-style: italic;
+  font-weight: 700;
+  src: local('Lobster Two Bold Italic'), local('LobsterTwo-BoldItalic'), url(../fonts/lobstertwo-bolditalic.woff) format('woff');
+}
+
 
 body,
 html {
